Z-index fix

--- a/dev/css/modules/_order.css
+++ b/dev/css/modules/_order.css
@@ -4,6 +4,7 @@
 	height: 100vh;
 	background-color: rgba(249,249,249, .95);
 	position: fixed;
+	top: 0;
 	justify-content: center;
 	align-items: center;
 	z-index: 999;
