--- a/dev/css/modules/_subheader.css
+++ b/dev/css/modules/_subheader.css
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgba(249, 249, 249, .95);
+	z-index: 1;
 
 	@media $medium {
 		height: auto;
